# protocol

./: .gitignore  README.md
Eclipse/: README.md  Readme.md
Eclipse/erebrus/: Anchor.toml  package-lock.json  package.json
Eclipse/erebrus/tests/: erebrus.ts
Eclipse/erebrus_v1/: Anchor.toml  package-lock.json
Eclipse/netsepio/: Anchor.toml  info.txt  package-lock.json
Peaq/: Readme.md
Peaq/smartcontracts/: .env.example  .gitignore  hardhat.config.ts  package.json
Solana/: README.md
Solana-Script/: initialize-erebrus.js  package.json
Solana/erebrus/: Anchor.toml  README.md
Solana/erebrus-nft/: Anchor.toml
Solana/erebrus_registry/: Anchor.toml
Solana/erebrus_v1/: Anchor.toml
Sui/: README.md
Sui/erebrus/: Move.toml
Sui/erebrus_v1/: Move.toml
erebrus_registry/: Anchor.toml  tsconfig.json
erebrus_registry/tests/: erebrus.ts
nodes/: README.md
nodes/arbitrum/: .gitignore  Readme.md
nodes/evm/: README.md  hardhat.config.ts
nodes/misc/: README.md
nodes/monad/: README.md  hardhat.config.ts  package.json
nodes/peaq/: README.md
nodes/rise/: hardhat.config.ts  package.json
nodes/solana/: README.md
nodes/solana/netsepio/programs/netsepio/: Cargo.toml
nodes/solana/netsepio/programs/netsepio/src/: lib.rs
reviews/: README.md
scripts/: README.md  package.json
scripts/Peaq/: Data.md  Reamd.md  go.mod  node_details.json
subscriptions/: README.md
subscriptions/ETH/: README.md
subscriptions/EVM/: .env.example  hardhat.config.ts  package-lock.json  package.json
subscriptions/monad/: package.json  tsconfig.json
(+89 files in other folders)
